<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_gradiente"
    tools:context=".vista.Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/IniciarSesionTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="center" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="loginIcon.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundColor="#7A7979"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/correoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="10dp"
                android:drawableTint="#000000"
                android:hint="@string/correoLogin"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:textColor="#000000"
                android:textColorHint="#0B0A0A" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#7A7979"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/passPoling"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:drawableTint="#171717"
                android:fontFamily="@font/manrope"
                android:hint="@string/passPoling"
                android:inputType="textPassword"
                android:padding="20dp"
                android:textColor="#000000"
                android:textColorHighlight="#000000"
                android:textColorHint="#0C0C0C"
                android:textColorLink="#000000" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/BtnLogeo"
            android:text="@string/BtnLogeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue_button"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/UsuarioNuevoTXT"
            android:textColor="#F3EEEE"
            android:text="@string/UsuarioNuevoTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="20dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>
